# Cabe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  log.txt
.cache/clangd/index/: D3D11_PixelShader_Advanced.h.0E5F9290E365C9A2.idx  D3D11_PixelShader_Colors.h.E5C05666114F9808.idx  D3D11_PixelShader_Textures.h.4E4B0B83CAE3A34B.idx  D3D11_VertexShader.h.8A0DFF62CAA2AA01.idx  D3D12_Blit.h.4857C68672ADAC3F.idx  D3D12_PixelShader_Advanced.h.E4FD9E7EE86E7FEA.idx  D3D12_PixelShader_Colors.h.2C79EC20EB7AE352.idx  D3D12_PixelShader_Textures.h.C6DEEAA71D889A40.idx  D3D12_RootSig_Advanced.h.2D27917617B8122B.idx  D3D12_RootSig_Color.h.8C03723E6C7E0CAF.idx  D3D12_RootSig_Texture.h.04E5F459C195D1FA.idx  D3D12_VertexShader_Advanced.h.49150E85C72715B7.idx  D3D12_VertexShader_Color.h.670B662AAB0D6417.idx  D3D12_VertexShader_Texture.h.5E3F3C9B78609F5A.idx  D3D9_PixelShader_YUV.h.8714AF601375B12A.idx  SDL.c.A92980A299E67498.idx  SDL.h.853E0D544C94CFB8.idx  SDL_RLEaccel.c.EF6B497A065C5462.idx  SDL_RLEaccel_c.h.A5E5473CD7B423A6.idx  SDL_assert.c.A6D3AB320A87093D.idx  SDL_assert.h.096E9C61C2F3AEAC.idx  SDL_assert_c.h.9F0E7B479E56C254.idx  SDL_asyncio.c.0C8FE17F77ED9738.idx  SDL_asyncio.h.0455EACA5A6A3AD1.idx  SDL_asyncio_c.h.FE9380CE9D7ACA30.idx  SDL_asyncio_generic.c.A03CE03357F4C05D.idx  SDL_asyncio_windows_ioring.c.EF347CBF6B0C1ECC.idx  SDL_atomic.c.DE46F376F368B5BC.idx  SDL_atomic.h.39C1E31635FE2CEC.idx  SDL_audio.c.F2C7A93C44B541A7.idx  SDL_audio.h.3FDE2D512D298871.idx  SDL_audio_c.h.2FA9F3A15B96324B.idx  SDL_audio_channel_converters.h.7C5A1B2D76F41569.idx  SDL_audiocvt.c.9BD7C6F5791FC123.idx  SDL_audiodev.c.90C74FEA299EACBB.idx  SDL_audioqueue.c.E2174D0DC6A3384D.idx  SDL_audioqueue.h.C2E83C56F1CBBF39.idx  SDL_audioresample.c.86C4AA8CFB694079.idx  SDL_audioresample.h.D3F553C4ED4A7E82.idx  SDL_audiotypecvt.c.8D57845A47050D9C.idx  (+574 more)
src/: ArgsManager.cpp  ArgsManager.h  BackendTemplate.hpp  CMakeLists.txt  Cabe.cpp  Cabe.h  Cabe.hpp  Event.h  Event.hpp  File.cpp  File.h  FileManager.cpp  FileManager.hpp  FrontendTemplate.hpp  IBackend.hpp  IBackendFactory.hpp  IFrontend.hpp  InputManager.cpp  InputManager.h  Log.cpp  Log.hpp  Main.cpp  Utils.h  Utils.hpp  tempMain.cpp
src/Backends/: BackendTemplate.hpp  CMakeLists.txt
src/Backends/Basic/: BasicBackend.cpp  BasicBackend.hpp  BasicBackendFactory.hpp  CMakeLists.txt
src/Backends/BasicBackend/: Backend.cpp  Backend.hpp  CMakeLists.txt
src/Backends/GapBuffer/: CMakeLists.txt  GapBufferBackend.hpp  GapBufferBackendFactory.hpp
src/Core/: Event.hpp  EventManager.cpp  EventManager.hpp  File.hpp  FileManager.cpp  FileManager.hpp  IBackend.hpp  IFrontend.hpp  IRenderBackend.hpp  ITextBackend.hpp  Log.cpp  Log.hpp  Utils.hpp
src/Core/Events/: KeyEvent.cpp  KeyEvent.hpp  OpenFileEvent.cpp  OpenFileEvent.hpp  QuitEvent.cpp  QuitEvent.hpp  TextInputEvent.cpp  TextInputEvent.hpp
src/FrontEnds/: CMakeLists.txt  FrontendTemplate.hpp
src/FrontEnds/SDL3BuiltIn/: CMakeLists.txt  Frontend.cpp  Frontend.hpp  SDL3BuiltInFrontEnd.cpp  SDL3BuiltInFrontEnd.hpp
src/RenderBackends/: CMakeLists.txt  RenderBackendTemplate.hpp
src/RenderBackends/SDL3BuiltIn/: CMakeLists.txt  RenderBackend.cpp  RenderBackend.hpp
src/TextBackends/: CMakeLists.txt  TextBackendTemplate.hpp
src/TextBackends/BasicTextBackend/: CMakeLists.txt  TextBackend.cpp  TextBackend.hpp
src/renderer/: CMakeLists.txt  Renderer.h
src/text/: CMakeLists.txt  Text.cpp  Text.h
