set(SDL_TEST OFF CACHE BOOL "" FORCE)
set(SDL_SHARED OFF CACHE BOOL "" FORCE)
set(SDL_STATIC ON CACHE BOOL "" FORCE)
set(SDL_DISABLE_INSTALL ON CACHE BOOL "" FORCE)

set(SDL_JOYSTICK		OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_HIDAPI		OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_RAWINPUT	OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_WGI		OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_XINPUT		OFF CACHE BOOL "" FORCE)
set(SDL_JOYSTICK_DINPUT		OFF CACHE BOOL "" FORCE)
set(SDL_HAPTIC			OFF CACHE BOOL "" FORCE)
set(SDL_HIDAPI			OFF CACHE BOOL "" FORCE)
set(SDL_HIDAPI_JOYSTICK		OFF CACHE BOOL "" FORCE)
set(SDL_HIDAPI_LIBUSB		OFF CACHE BOOL "" FORCE)
set(SDL_HIDAPI_LIBUSB_SHARED	OFF CACHE BOOL "" FORCE)
set(SDL_SENSOR			OFF CACHE BOOL "" FORCE)
set(SDL_CAMERA			OFF CACHE BOOL "" FORCE)
set(SDL_DUMMYCAMERA		OFF CACHE BOOL "" FORCE)
set(SDL_POWER			OFF CACHE BOOL "" FORCE)
set(SDL_OPENVR			OFF CACHE BOOL "" FORCE)
set(SDL_VIRTUAL_JOYSTICK	OFF CACHE BOOL "" FORCE)
set(SDL_TEST			OFF CACHE BOOL "" FORCE)
set(SDL_TESTS			OFF CACHE BOOL "" FORCE)
set(SDL_TEST_LIBRARY		OFF CACHE BOOL "" FORCE)
set(SDL_EXAMPLES		OFF CACHE BOOL "" FORCE)
set(SDL_AUDIO			OFF CACHE BOOL "" FORCE)
set(SDL_DISKAUDIO		OFF CACHE BOOL "" FORCE)
set(SDL_DUMMYAUDIO		OFF CACHE BOOL "" FORCE)
set(SDL_PULSEAUDIO		OFF CACHE BOOL "" FORCE)
set(SDL_ALSA			OFF CACHE BOOL "" FORCE)
set(SDL_WASAPI			OFF CACHE BOOL "" FORCE)
set(SDL_SNDIO			OFF CACHE BOOL "" FORCE)
set(SDL_PIPEWIRE		OFF CACHE BOOL "" FORCE)
set(SDL_JACK			OFF CACHE BOOL "" FORCE)

add_subdirectory(SDL EXCLUDE_FROM_ALL)

# imgui

add_library(imgui STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_demo.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_draw.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_tables.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui/imgui_widgets.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends/imgui_impl_sdl3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends/imgui_impl_sdlrenderer3.cpp
)

target_include_directories(imgui PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui
    ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends
)

target_link_libraries(imgui PUBLIC SDL3::SDL3)

add_library(Frontend STATIC
    Frontend.cpp
    Frontend.hpp
)

target_link_libraries(Frontend
    PUBLIC

    SDL3::SDL3
    imgui
)

target_include_directories(Frontend PUBLIC .)